fix text-alignment for testimonial quote

--- a/assets/_sass/aesop/_layout.scss
+++ b/assets/_sass/aesop/_layout.scss
@@ -556,6 +556,7 @@
     .testimonial-item {
       width: unset;
       padding: 45px 25px;
+      text-align: left;
       .quote {
         font-size: 18px;
         padding: 0 18px;
